# Spitfire

./: .gitignore  .readthedocs.yaml  .travis.yml  contributing.md  description_short  license  license.md  readme.md  release_notes  setup.py
demo/flamelet/: bleh  coal_library.pkl  custom_library_generate-coal_combustion_quasisteady_heat_loss.py  custom_library_visualize-coal_combustion_quasisteady_heat_loss.py  flamelet_solution-transient-one-step-optimization.py  flamelet_solution-transient-rate-sensitivity-study.py  flamelet_solution-transient_nonadiabatic.py  flamelet_solution-unsteady-adiabatic-with-cema.py  library-adiabatic_slfm_basic.py  library-adiabatic_slfm_flamelet_variations.py  library-compare_eq_bs_slfm.py  library-nonadiabatic_slfm_basic.py  mechtesting.py  moremechtesting.py  steady-flamelet-adaptive-grid.py  steady_one_step.py
demo/reactors/: DME-ignition-delay-demo.ipynb  closed-reactors.py  docs-example-1.py  docs-example-2.py  ignext-ethylene-mechanism-comparison.py  ignext-hydrogen-mechanism-comparison.py  ignition-delay-profiles-DME-negative-temp-coeff.py  ignition-delay-profiles-PRF-SuperLU.py  ignition-delay-profiles-biodiesel-negative-temp-coeff.py  ignition-delay-profiles-methane-mechanism-comparison.py  ignition-one-step-mechanism-study.py  isobaric-adiabatic-closed-data-for-pca.py  mehl_test.py  open-reactor-oscillatory-convection.py  open-reactor-oscillatory-feed-temperature.py  open-reactors-isobaric-adiabatic.py  open-reactors-isobaric-diathermal-shapes.py  open-reactors-isobaric-diathermal.py  open-reactors-isobaric-isothermal-with-insitu-processing.py  open-reactors-isochoric-adiabatic.py  open-reactors-isochoric-diathermal.py  open-reactors-isochoric-isothermal.py  oscillatory-reactor-demo.ipynb  simple-reactor-ignition-demo.ipynb
demo/time_integration/: ballistics-demo.ipynb  ballistics.py  ecology.py  (+4 more)
docs/: environment.yaml  requirements.txt
spitfire/: __init__.py
spitfire/griffon/: CMakeLists.txt  __init__.py  griffon.pyx
spitfire/griffon/include/: blas_lapack_kernels.h  btddod_matrix_kernels.h  combustion_kernels.h
spitfire/griffon/performance_testing/: CMakeLists.txt  flamelet_rhs_timer.cpp  mmw_timer.cpp  test_helper.cpp  test_helper.h
spitfire/griffon/src/: CMakeLists.txt  blas_lapack_kernels.cpp  btddod_matrix_kernels.cpp  chemistry_kernels.cpp  chemistry_setup.cpp  element_mw_map.cpp  flamelet2d_kernels.cpp  flamelet_kernels.cpp  isobaric_reactor_kernels.cpp  isochoric_reactor_kernels.cpp  rates_sensitivities_exact.cpp  rates_sensitivities_no_tbaf_sens.cpp  rates_sensitivities_sparse.cpp  thermodynamics_kernels.cpp
(+495 files in other folders)
